[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/easycpp/scripts/tabcontrol.gd" type="Script" id=1]

[node name="TabControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
alignment = 2

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 701.0
margin_right = 770.0
margin_bottom = 20.0
text = "Add New"

[node name="DuplicateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 774.0
margin_right = 906.0
margin_bottom = 20.0
text = "Duplicate Selected"

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 910.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Delete Selected"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DuplicateButton" to="." method="_on_DuplicateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
